--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint --fix --ext .ts .",
     "build": "tsc",
     "postbuild": "node dist/Bot.js",
-    "test": "ts-node test/ytID.ts"
+    "test": "ts-node test/spotify-info/test-spotify.ts"
   },
   "keywords": [],
   "author": "SKOWisp",
@@ -20,12 +20,14 @@
     "@discordjs/voice": "^0.16.0",
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
+    "isomorphic-unfetch": "^4.0.2",
     "libsodium-wrappers": "^0.7.11",
+    "spotify-url-info": "^3.2.5",
     "url-parse": "^1.5.10",
     "validator": "^13.9.0",
     "ytdl-core": "^4.11.5",
     "ytpl": "^2.3.0",
-    "ytsr": "^3.8.2"
+    "ytsr": "TimeForANinja/node-ytsr#pull/203/head"
   },
   "devDependencies": {
     "@types/node": "^20.4.2",
