--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mettatonv3",
-  "version": "1.0.8",
+  "version": "1.0.0",
   "description": "Hopefully a better verion of the Mettaton Discord bot.",
   "main": "src/Bot.ts",
   "scripts": {
@@ -9,6 +9,7 @@
     "undeploy": "ts-node test/Delete-Commands.ts",
     "lint": "eslint --fix --ext .ts .",
     "build": "tsc",
+    "test": "ts-node test/spotify-info/test-spotify.ts"
   },
   "keywords": [],
   "author": "SKOWisp",
