--- a/package.json
+++ b/package.json
@@ -16,13 +16,12 @@
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.0",
-    "discord.js": "^14.11.0",
+    "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
     "isomorphic-unfetch": "^4.0.2",
     "libsodium-wrappers": "^0.7.11",
-    "spotify-url-info": "^3.2.5",
+    "spotify-url-info": "^3.2.6",
     "url-parse": "^1.5.10",
-    "validator": "^13.9.0",
     "ytdl-core": "^4.11.5",
     "ytpl": "^2.3.0",
     "ytsr": "TimeForANinja/node-ytsr#pull/203/head"
@@ -33,8 +32,22 @@
     "@types/validator": "^13.7.17",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.45.0",
+    "@types/validator": "^13.9.0",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
+    "eslint": "^8.46.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/SKOWisp/MettatonV3.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SKOWisp/MettatonV3/issues"
+  },
+  "homepage": "https://github.com/SKOWisp/MettatonV3#readme"
 }
