--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@discordjs/voice": "^0.16.0",
     "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
+    "fast-average-color-node": "^2.6.0",
     "isomorphic-unfetch": "^4.0.2",
     "libsodium-wrappers": "^0.7.11",
     "spotify-url-info": "^3.2.6",
