--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
     "fast-average-color-node": "^2.6.0",
+    "ffmpeg-static": "^5.2.0",
     "isomorphic-unfetch": "^4.0.2",
     "libsodium-wrappers": "^0.7.11",
+    "prism-media": "^1.3.5",
     "spotify-url-info": "^3.2.6",
     "url-parse": "^1.5.10",
     "validator": "^13.11.0",
