--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.0",
-    "@distube/ytdl-core": "^4.15.1",
+    "@distube/ytdl-core": "github:ToddyTheNoobDud/ytdl-core-stuff",
     "@distube/ytsr": "^2.0.4",
-    "@hydralerne/youtube-api": "^1.0.2",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
     "fast-average-color-node": "^2.6.0",
@@ -31,6 +30,7 @@
     "sqlite3": "^5.1.7",
     "url-parse": "^1.5.10",
     "validator": "^13.11.0",
+    "youtube-dl-exec": "^3.0.13",
     "ytpl": "^2.3.0"
   },
   "devDependencies": {
