--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "dependencies": {
     "@discordjs/opus": "^0.10.0",
     "@discordjs/voice": "^0.16.0",
-    "@distube/ytdl-core": "^4.16.0",
+    "@distube/ytdl-core": "^4.16.4",
     "@distube/ytsr": "^2.0.4",
     "discord.js": "^14.14.1",
+    "distube": "file:ytdl-core/@latest",
     "dotenv": "^16.3.1",
     "fast-average-color-node": "^2.6.0",
     "isomorphic-unfetch": "^4.0.2",
