feat: upgrade to version 3.0.0-alpha and refactor codebase for ES module support
- Updated package version to 3.0.0-alpha and set type to module in package.json.
- Refactored import/export statements across the codebase to use ES module syntax.
- Replaced ytdl-core with youtubei.js for YouTube video handling.
- Enhanced YouTubeAgent to utilize Innertube for improved performance and reliability.
- Updated song data handling to use 'title' instead of 'name' for consistency.
- Modified build script to include tsc-alias for path resolution.
- Adjusted TypeScript configuration for ES module compatibility.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
 	"compilerOptions": {
 		"target": "ESNext",
-		"module": "commonjs",
+		"module": "ESNext",
+        "moduleResolution": "Node",
 		"rootDir": "./src/",
 		"outDir": "./dist/",
 		"strict": true,
-		"moduleResolution": "node",
 		"importHelpers": true,
 		"experimentalDecorators": true,
 		"esModuleInterop": true,
@@ -20,6 +20,17 @@
 		"sourceMap": false,
 		"baseUrl": "./"
 	},
+	"ts-node": {
+         "esm": true
+    },
+	"tsc-alias": {
+    "verbose": false,
+    "resolveFullPaths": true,
+    "fileExtensions": {
+      "inputGlob": "{js,jsx,mjs}",
+      "outputCheck": ["js", "json", "jsx", "mjs"]
+    }
+  	},
 	"files": [
 		"src/Bot.ts"
 	],
