--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mettatonv3",
-  "version": "2.3.2",
+  "version": "3.0.0-alpha",
+  "type": "module",
   "description": "Hopefully a better version of the Mettaton Discord bot.",
   "main": "src/Bot.ts",
   "scripts": {
@@ -9,7 +10,7 @@
     "database": "ts-node src/DataBaseInit.ts -f",
     "undeploy": "ts-node test/Delete-Commands.ts",
     "lint": "eslint --fix --ext .ts .",
-    "build": "tsc"
+    "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json"
   },
   "keywords": [],
   "author": "SKOWisp",
@@ -17,10 +18,8 @@
   "dependencies": {
     "@discordjs/opus": "^0.10.0",
     "@discordjs/voice": "^0.16.0",
-    "@distube/ytdl-core": "^4.16.5",
     "@distube/ytsr": "^2.0.4",
     "discord.js": "^14.14.1",
-    "distube": "file:ytdl-core/@latest",
     "dotenv": "^16.3.1",
     "fast-average-color-node": "^2.6.0",
     "isomorphic-unfetch": "^4.0.2",
@@ -28,10 +27,9 @@
     "prism-media": "^1.3.5",
     "sequelize": "^6.37.0",
     "spotify-url-info": "^3.2.6",
-    "sqlite3": "^5.1.7",
     "url-parse": "^1.5.10",
     "validator": "^13.11.0",
-    "youtube-dl-exec": "^3.0.19",
+    "youtubei.js": "^15.1.1",
     "ytpl": "^2.3.0"
   },
   "devDependencies": {
@@ -42,6 +40,7 @@
     "@typescript-eslint/parser": "^6.2.1",
     "eslint": "^8.46.0",
     "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.16",
     "typescript": "^5.1.6"
   },
   "directories": {
