--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mettatonv3",
-  "version": "3.0.0-alpha",
+  "version": "3.0.0-alpha.1",
   "type": "module",
   "description": "Hopefully a better version of the Mettaton Discord bot.",
   "main": "src/Bot.ts",
@@ -27,6 +27,7 @@
     "prism-media": "^1.3.5",
     "sequelize": "^6.37.0",
     "spotify-url-info": "^3.2.6",
+    "sqlite3": "^5.1.7",
     "url-parse": "^1.5.10",
     "validator": "^13.11.0",
     "youtubei.js": "^15.1.1",
