--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "main": "src/Bot.ts",
   "scripts": {
     "start": "ts-node src/Bot.ts",
-    "deploy": "ts-node src/DeployCommands.ts",
+    "deploy": "node --loader ts-node/esm src/DeployCommands.ts",
     "database": "ts-node src/DataBaseInit.ts -f",
     "undeploy": "ts-node test/Delete-Commands.ts",
-    "lint": "eslint --fix --ext .ts .",
+    "lint": "eslint --ext .ts .",
+    "lint:fix": "eslint --fix --ext .ts .",
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json"
   },
   "keywords": [],
@@ -34,15 +35,17 @@
     "ytpl": "^2.3.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.36.0",
     "@types/node": "^20.4.8",
     "@types/url-parse": "^1.4.8",
     "@types/validator": "^13.9.0",
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
-    "eslint": "^8.46.0",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
+    "@typescript-eslint/parser": "^8.44.1",
+    "eslint": "^9.36.0",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.16",
-    "typescript": "^5.1.6"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.44.1"
   },
   "directories": {
     "test": "test"
