--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "description": "Hopefully a better version of the Mettaton Discord bot.",
   "main": "src/Bot.ts",
   "scripts": {
-    "start": "ts-node src/Bot.ts",
-    "deploy": "node --loader ts-node/esm src/DeployCommands.ts",
-    "database": "ts-node src/DataBaseInit.ts -f",
-    "undeploy": "ts-node test/Delete-Commands.ts",
+    "start": "node --loader ts-node/esm src/Bot.ts",
+    "deploy": "node ./dist/DeployCommands.js",
+    "database": "node --loader ts-node/esm src/meta/DataBaseInit.ts -f",
+    "undeploy": "node --loader ts-node/esm test/Delete-Commands.ts",
     "lint": "eslint --ext .ts .",
     "lint:fix": "eslint --fix --ext .ts .",
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json"
