--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@discordjs/opus": "^0.10.0",
     "@discordjs/voice": "^0.19.0",
     "@distube/ytsr": "^2.0.4",
+    "@snazzah/davey": "^0.1.7",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
     "fast-average-color-node": "^2.6.0",
